# killbot-benchmark

./: .gitignore  README.md  main.py  pyproject.toml
fixtures/: benchmark.json  benchmark.jsonc  benchmark.toml
fixtures/prompts/: fake-game.txt  human-in-the-loop.txt  majority-vote.txt  mission_focused.txt  realistic.txt  risk_averse.txt  user_prompt.txt
killbot_benchmark/: __init__.py  cli.py  config.py  env.py  openrouter.py  reporting.py  runner.py
results/: report.html  results.jsonl  summary.csv
scripts/: add_image_grids.py
tests/: test_config.py  test_reporting.py  test_runner.py
